# FinalProject-Group3

./: .gitignore  README.md
.github/workflows/: training.yml
Code/: README.md  pyproject.toml
Code/.github/workflows/: training.yml
Code/src/app/: __init__.py  app.py
Code/src/cli/: __init__.py  get_data.py  run_app.py  train_model.py
Code/src/data_collection/: __init__.py  bulk_data.py  parsing.py  policy_areas.py
Code/src/data_collection/utils/: __init__.py  downloads.py
Code/src/training/: __init__.py  train.py
Code/tests/app/: test_app.py
Code/tests/data_collection/: test_bulk_data.py  test_policy_areas.py
Final-Group-Presentation/: Final-Group-Presentation.pptx
Final-Group-Project-Report/: Group3_Report.docx
Group-Proposal/: group_3_proposal.docx
