[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bill-tagger"
version = "0.1.0"
description = "Assigning policy area tags to federal legislation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.4",
    "ipykernel>=6.29.5",
    "lxml>=5.4.0",
    "pip>=25.0.1",
    "polars>=1.27.1",
    "tqdm>=4.67.1",
]

[project.scripts]
download-data = "cli.get_data:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
