[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bill-tagger"
version = "0.1.0"
description = "Assigning policy area tags to federal legislation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.4",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "lxml>=5.4.0",
    "matplotlib>=3.10.1",
    "pip>=25.0.1",
    "polars>=1.27.1",
    "pyarrow>=19.0.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.1",
    "tqdm>=4.67.1",
    "wordcloud>=1.9.4",
]

[project.scripts]
get-data = "cli.get_data:main"
run-app = "cli.run_app:main"
train-model = "cli.train_model:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
